@@ -19,9 +19,10 @@ cube.solid.random(p, n = 850 * 2^p)
 \author{ Barret Schloerke }
 \examples{
 ## Generates a solid cube with random points
-cube.solid.random(p = 3,)
+cube.solid.random(p = 3, n = 1000)
 
+\dontrun{
 ## Through rggobi
 ggobi(cube.solid.random(p = 3,))
-}
+}}
 \keyword{ dynamic }
